[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Enemies/bullet 8x8.png" type="Texture" id=1]
[ext_resource path="res://Scenes/EnemyBullet.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sound/player_dead.wav" type="AudioStream" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.0
height = 0.0

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=2]
lifetime_randomness = 0.5
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 20.0
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 1.3
scale_curve = SubResource( 6 )

[sub_resource type="OccluderPolygon2D" id=4]
polygon = PoolVector2Array( -3, -1, -3, 0, -3, 1, -2, 1, -2, 2, -1, 2, -1, 3, 0, 3, 1, 3, 1, 2, 2, 2, 2, 1, 3, 1, 3, 0, 3, -1, 2, -1, 2, -2, 1, -2, 1, -3, 0, -3, -1, -3, -1, -2, -2, -2, -2, -1 )

[node name="EnemyBullet" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 2, 2, 2, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="Particles2D" type="Particles2D" parent="."]
self_modulate = Color( 2, 2, 2, 1 )
emitting = false
amount = 10
one_shot = true
explosiveness = 1.0
process_material = SubResource( 2 )
texture = ExtResource( 1 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="PlayerDie" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_EnemyBullet_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
